--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,17 @@
-<div class="example-container">
+<form novalidate [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm)">
+  <div class="example-container">
     <mat-form-field>
-      <input matInput placeholder="Email">
-    </mat-form-field>
-  
-    <mat-form-field>
-      <input type="password" matInput placeholder="Password">
+      <input type="text" formControlName="email" matInput placeholder="Email">
+      
     </mat-form-field>
 
-    <button id="login_button" mat-raised-button>Login</button>
+
+    <mat-form-field>
+      <input type="password" formControlName="password" matInput placeholder="Password">
+    </mat-form-field>
+
+    <button type="submit" id="login_button" [disabled]="!loginForm.valid" mat-raised-button>Login</button>
+
   </div>
+  
+</form>
