User components done. Train components started

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -29,9 +29,9 @@
           </i>
           <span class="app-title">Keaconductor</span>
           <span class="fill-space"></span>
-          <a [routerLink]="['/user/add']" routerLinkActive="router-link-active" ><span class="nav-item">Conduct</span></a>
-          <span class="nav-item">Trains</span>
-          <a routerLink='user' routerLinkActive="router-link-active"><span class="nav-item">Users</span></a>
+          <a [routerLink]="['user/interface']" routerLinkActive="router-link-active" ><span class="nav-item">Conduct</span></a>
+          <a [routerLink]="['train/interface']" routerLinkActive="router-link-active"> <span class="nav-item">Trains</span></a>
+          <a [routerLink]="['user/interface']" routerLinkActive="router-link-active"><span class="nav-item">Users</span></a>
           <span class="nav-item">Map</span>
           <i class="material-icons nav-icon">
               account_circle
