--- a/src/app/add-train/add-train.component.html
+++ b/src/app/add-train/add-train.component.html
@@ -2,7 +2,7 @@
   <h3>Register a new user</h3>
 </div>
 <div class="container">
-  <form novalidate [formGroup]="addUserForm" (ngSubmit)="onSubmit(addUserForm)">
+  <form novalidate [formGroup]="addUserForm">
     <div class="form-container">
       <mat-form-field>
         <input type="text" formControlName="firstName" matInput placeholder="First name">
