--- a/src/app/users-interface/users-interface.component.scss
+++ b/src/app/users-interface/users-interface.component.scss
@@ -1,4 +1,36 @@
-.user-list {
-    width: 100%;
-    background: red;
+#headline {
+    display: flex;
+    margin: 2% auto 0 auto;
+    width: 50%;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
+
+.divider {
+    width: 100%;
+    margin-bottom: 2%;
+}
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+.user-card {
+    width: 400px;
+    margin-bottom: 2%;
+}
+
+button {
+    margin-right: 2%;
+}
+
+.error-message {
+    color: red;
+    font-size: 0.7rem;
+}
+
