--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -1,5 +1,6 @@
 <div id="headline">
   <h3>Register a new user</h3>
+  <mat-divider class="divider"></mat-divider>
 </div>
 <div class="container">
   <form novalidate [formGroup]="addUserForm" (ngSubmit)="onSubmit(addUserForm)">
