--- a/src/app/add-train/add-train.component.scss
+++ b/src/app/add-train/add-train.component.scss
@@ -3,7 +3,15 @@
     margin: 2% auto 0 auto;
     width: 50%;
     justify-content: center;
-}   
+    flex-direction: column;
+    align-items: center;
+    text-transform: uppercase;
+}
+
+.divider {
+    width: 100%;
+    margin-bottom: 2%;
+}
 
 .container {
     display: flex;
@@ -17,6 +25,6 @@
 }
 
 #login_button {
-    width: 30%;
+    width: 15%;
     float: right;
 }
