--- a/src/app/add-user/add-user.component.scss
+++ b/src/app/add-user/add-user.component.scss
@@ -3,8 +3,16 @@
     margin: 2% auto 0 auto;
     width: 50%;
     justify-content: center;
-}   
+    flex-direction: column;
+    align-items: center;
+    text-transform: uppercase;
 
+}
+
+.divider {
+    width: 100%;
+    margin-bottom: 2%;
+}
 .container {
     display: flex;
     margin: 2% auto 0 auto;
