--- a/src/app/users-interface/users-interface.component.html
+++ b/src/app/users-interface/users-interface.component.html
@@ -1,6 +1,6 @@
 <div>
   <div id="headline">
-    <h3 id="title">All Users</h3>
+    <h3 id="title">Users</h3>
     <mat-divider class="divider"></mat-divider>
   </div>
   <div class="card-container">
