--- a/src/app/users-interface/users-interface.component.scss
+++ b/src/app/users-interface/users-interface.component.scss
@@ -5,6 +5,8 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    text-transform: uppercase;
+
 }
 
 .divider {
