--- a/src/app/train-interface/train-interface.component.html
+++ b/src/app/train-interface/train-interface.component.html
@@ -9,9 +9,9 @@
         <mat-card-header>
           <mat-card-title class="train-title">{{train.name}}</mat-card-title>
           <div class="fill"></div>
-              <button mat-raised-button color="accent" id="edit-button">Edit</button>
+              <button mat-raised-button id="edit-button">Edit</button>
         </mat-card-header>
-        <img mat-card-image src="/assets/img/dan-paul-97267-unsplash.jpg" alt="Photo of a Shiba Inu">
+        <img mat-card-image src="/assets/img/{{train.photoName}}" alt="Photo of a Shiba Inu">
         <mat-card-content>
           <p>Loco Address: {{train.locoAddress}}</p>
           <p>Length: {{train.length}}</p>
