--- a/src/app/train-interface/train-interface.component.scss
+++ b/src/app/train-interface/train-interface.component.scss
@@ -1,3 +1,5 @@
+@import "../../styles.scss";
+
 #headline {
   display: flex;
   margin: 2% auto 0 auto;
@@ -19,6 +21,10 @@
   margin-bottom: 2%;
 }
 
+img {
+    max-height: 188px;
+}
+
 .card-container {
     display: flex;
     flex-wrap: wrap;
@@ -38,6 +44,8 @@
 #edit-button {
     font-size: 1em;
     margin-bottom: 10px;
+    background-color: $kea-green;
+    color: $kea-white;
 }
 
 #description {
