--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -29,10 +29,10 @@
           </i>
           <span class="app-title">Keaconductor</span>
           <span class="fill-space"></span>
-          <a [routerLink]="['user/interface']" routerLinkActive="router-link-active" ><span class="nav-item">Conduct</span></a>
+          <a [routerLink]="['conduct']" routerLinkActive="router-link-active" ><span class="nav-item">Conduct</span></a>
           <a [routerLink]="['train/interface']" routerLinkActive="router-link-active"> <span class="nav-item">Trains</span></a>
           <a [routerLink]="['user/interface']" routerLinkActive="router-link-active"><span class="nav-item">Users</span></a>
-          <span class="nav-item">Map</span>
+          <a [routerLink]="['docs']" routerLinkActive="router-link-active"><span class="nav-item">Docs</span></a>
           <i class="material-icons nav-icon">
               account_circle
               </i>
