conduct divs bettered

--- a/src/app/conduct/conduct.component.html
+++ b/src/app/conduct/conduct.component.html
@@ -19,7 +19,15 @@
           <button mat-raised-button id="set-loko-address" class="set-loko-address">Set Train Address</button>
           <mat-divider [inset]="true"></mat-divider>
           <p>Choo Choo: <button mat-raised-button id="loko-sound-on" class="loko-sound-on">Sound On</button>
-            <button mat-raised-button id="loko-sound-off" class="loko-sound-off">Sound Off</button> </p> 
+            <button mat-raised-button id="loko-sound-off" class="loko-sound-off">Sound Off</button> </p>
+          <p>Bell: <button mat-raised-button id="bell-sound-on" class="bell-sound-on">Sound On</button>
+            <button mat-raised-button id="bell-sound-off" class="bell-sound-off">Sound Off</button> </p>
+          <p>Horn 1: <button mat-raised-button id="horn1-sound-on" class="horn1-sound-on">Sound On</button>
+            <button mat-raised-button id="horn1-sound-off" class="horn1-sound-off">Sound Off</button> </p>
+          <p>Horn 2: <button mat-raised-button id="horn2-sound-on" class="horn2-sound-on">Sound On</button>
+            <button mat-raised-button id="horn2-sound-off" class="horn2-sound-off">Sound Off</button> </p>
+          <p>Lights: <button mat-raised-button id="lights-sound-on" class="lights-sound-on">Sound On</button>
+            <button mat-raised-button id="lights-sound-off" class="lights-sound-off">Sound Off</button> </p>
         </mat-card-content>
       </mat-card>
     </div>
