--- a/src/app/conduct/conduct.component.html
+++ b/src/app/conduct/conduct.component.html
@@ -31,6 +31,29 @@
         </mat-card-content>
       </mat-card>
     </div>
-    <div class="map-box"></div>
+    <div class="map-box">
+        <mat-card class="example-card">
+            <mat-card-header>
+              <mat-card-title>CONDUCT</mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <mat-form-field class="example-full-width">
+                <input id="loko-address1" class="loko-address" matInput placeholder="Loko address">
+              </mat-form-field>
+              <button mat-raised-button id="set-loko-address1" class="set-loko-address">Set Train Address</button>
+              <mat-divider [inset]="true"></mat-divider>
+              <p>Choo Choo: <button mat-raised-button id="loko-sound-on1" class="loko-sound-on">Sound On</button>
+                <button mat-raised-button id="loko-sound-off1" class="loko-sound-off">Sound Off</button> </p>
+              <p>Bell: <button mat-raised-button id="bell-sound-on1" class="bell-sound-on">Sound On</button>
+                <button mat-raised-button id="bell-sound-off1" class="bell-sound-off">Sound Off</button> </p>
+              <p>Horn 1: <button mat-raised-button id="horn1-sound-on1" class="horn1-sound-on">Sound On</button>
+                <button mat-raised-button id="horn1-sound-off1" class="horn1-sound-off">Sound Off</button> </p>
+              <p>Horn 2: <button mat-raised-button id="horn2-sound-on1" class="horn2-sound-on">Sound On</button>
+                <button mat-raised-button id="horn2-sound-off1" class="horn2-sound-off">Sound Off</button> </p>
+              <p>Lights: <button mat-raised-button id="lights-sound-on1" class="lights-sound-on">Sound On</button>
+                <button mat-raised-button id="lights-sound-off1" class="lights-sound-off">Sound Off</button> </p>
+            </mat-card-content>
+          </mat-card>
+    </div>
   </div>
 </div>
