--- a/src/app/conduct/conduct.component.html
+++ b/src/app/conduct/conduct.component.html
@@ -84,7 +84,7 @@
       </mat-card>
     </div>
 
-    <div class="map-box">
+    <div class="conduct-box">
       <mat-card class="example-card">
         <mat-card-header>
           <mat-card-title>LOCOMOTIVE TWO</mat-card-title>
@@ -158,5 +158,6 @@
         </mat-card-content>
       </mat-card>
     </div>
+    <div class="map-box"></div>
   </div>
 </div>
