--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="button-container">
     <div id="flex-spacer"></div>
-    <button routerLink="add" routerLinkActive="active" mat-raised-button color="primary" id="nav-button-create">Create</button>
-    <button routerLink="interface" routerLinkActive="active" mat-raised-button color="primary" id="nav-button-retrieve">Retrieve</button>
+    <button routerLink="add" routerLinkActive="active" mat-raised-button id="nav-button-create" class="menu-button">Create</button>
+    <button routerLink="interface" routerLinkActive="active" mat-raised-button id="nav-button-retrieve" class="menu-button">Retrieve</button>
   </div>
     <router-outlet></router-outlet>
 </div>
