--- a/src/app/add-user/add-user.component.scss
+++ b/src/app/add-user/add-user.component.scss
@@ -1,6 +1,6 @@
 #headline {
     display: flex;
-    margin: 2% auto 0 auto;
+    margin: 0 auto 0 auto;
     width: 50%;
     justify-content: center;
     flex-direction: column;
@@ -15,7 +15,7 @@
 }
 .container {
     display: flex;
-    margin: 2% auto 0 auto;
+    margin: 0 auto 0 auto;
     justify-content: center;
 }
 
