--- a/src/app/train-interface/train-interface.component.scss
+++ b/src/app/train-interface/train-interface.component.scss
@@ -2,7 +2,7 @@
 
 #headline {
   display: flex;
-  margin: 2% auto 0 auto;
+  margin: 0 auto 0 auto;
   width: 50%;
   justify-content: center;
   flex-direction: column;
@@ -18,6 +18,7 @@
 
 .train-card {
   max-width: 250px;
+  height: 400px;
   margin-bottom: 2%;
 }
 
@@ -39,6 +40,8 @@ img {
 
 .train-title {
     margin-top: 6px;
+    height: 20px;
+    font-size: 1em;
 }
 
 #edit-button {
@@ -50,4 +53,8 @@ img {
 
 #description {
     margin-top: 20px;
+}
+
+p {
+    font-size: 0.90em;
 }
