--- a/src/app/train/train.component.html
+++ b/src/app/train/train.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="button-container">
       <div id="flex-spacer"></div>
-      <button routerLink="add" routerLinkActive="active" mat-raised-button color="primary" id="nav-button-create">Create</button>
-      <button routerLink="interface" routerLinkActive="active" mat-raised-button color="primary" id="nav-button-retrieve">Retrieve</button>
+      <button routerLink="add" routerLinkActive="active" mat-raised-button class="menu-button" id="nav-button-create">Create</button>
+      <button routerLink="interface" routerLinkActive="active" mat-raised-button class="menu-button" id="nav-button-retrieve">Retrieve</button>
     </div>
       <router-outlet></router-outlet>
   </div>
