deletion possible from user screen

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -42,7 +42,7 @@
           <button mat-icon-button (click)="onEdit(row)">
             <mat-icon>launch</mat-icon>
           </button>
-          <button mat-icon-button color="warn" (click)="onDelete(row.$key)">
+          <button mat-icon-button color="warn" (click)="onDelete(row.email)">
             <mat-icon>delete_outline</mat-icon>
           </button>
         </mat-cell>
